[gd_scene load_steps=5 format=2]

[ext_resource path="res://Code/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Artwork/CoffeeShop.png" type="Texture" id=2]
[ext_resource path="res://Code/CoffeeShop/CoffeeShop.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 118.736, 97.0949 )

[node name="CoffeeShop" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.953369, 298.899 )
scale = Vector2( 0.5, 0.561727 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="DoorArea" type="Area2D" parent="."]
position = Vector2( -95.1366, 416.223 )

[node name="ColorRect" type="ColorRect" parent="DoorArea"]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = -33.0
margin_top = -351.0
margin_right = 199.0
margin_bottom = -35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 81.0718, -197.779 )
shape = SubResource( 1 )

[node name="Character" parent="." instance=ExtResource( 1 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -1193.06, 10.011, 1160.7, 38.5198, 1167.83, 592.659, 717.031, 587.313, 647.541, 460.806, 554.888, 460.806, 535.288, 498.224, 494.307, 494.66, 467.58, 466.151, 362.454, 460.806, 337.508, 480.406, 287.618, 478.624, 260.891, 459.024, 177.147, 459.024, 175.365, 385.97, -156.049, 380.625, -154.268, 462.588, -293.248, 473.278, -630.008, 455.46, -676.335, 564.15, -1157.42, 564.15, -1193.06, 606.913 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 17.818, -48.1085 )
polygon = PoolVector2Array( -1209.61, 645.385, 1371.52, 644.565, 1373.54, 655.647, -1211.19, 657.291 )
[connection signal="area_entered" from="DoorArea" to="." method="_on_DoorArea_area_entered"]
[connection signal="area_exited" from="DoorArea" to="." method="_on_DoorArea_area_exited"]
